--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="description" content="基于HTML5的多图Ajax上传 » 张鑫旭-鑫空间-鑫生活" />
-<meta name="description" content="张鑫旭web前端学习实例页面 基于HTML5的多图Ajax上传" />
 <meta name="keywords" content="web前端, HTML5, ajax, javascript, 图片上传" />
 <meta name="author" content="张鑫旭, zhangxixnu" />
-<title>基于HTML5的多图Ajax上传 » 张鑫旭-鑫空间-鑫生活</title>
+<title>基于HTML5的多图Ajax上传</title>
 <link rel="stylesheet" href="../css/demo.css" type="text/css" />
 <style>
 .upload_box{width:800px; margin:1em auto;}
@@ -27,7 +25,7 @@
 
 <body>
 <div id="header">
-	<a href="http://www.zhangxinxu.com/" class="logo" title="回到鑫空间-鑫生活首页">
+	<a href="http://www.zhangxinxu.com/" class="logo" title="">
     	<img src="http://www.zhangxinxu.com/php/image/zxx_home_logo.png" border="0" />
     </a>
 </div>
